EJBTHREE-2220 Fix createIntervalTimer which wasn't honouring the initialDuration